--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manages the settings for the Code and Coffee Website Service",
   "main": "index.js",
   "scripts": {
-    "validate": "npx eslint . && npx prettier --check .",
+    "validate": "ts-node ./validation/validate.ts",
     "fix": "npx prettier --write . && npx eslint . --fix"
   },
   "repository": {
@@ -21,8 +21,10 @@
     "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "ajv": "^8.12.0",
     "eslint": "^8.39.0",
     "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
