Created validation script

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -8,3 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: development
     timeout-minutes: 15
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+      - name: Get dependencies
+        shell: bash
+        run: npm ci
+      - name: Validate
+        run: npm run validate
