--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "noEmit": true,
     "noUnusedLocals": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   }
 }
